--- a/assets/index.html
+++ b/assets/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="xterm.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
-    <script src="https://puter.com/puter.js/v2"></script>
+    <script src="http://localhost:8080/dist/puter.js"></script>
     <script src="config.js"></script>
     <script src="bundle.js"></script>
     <script>
